# seletrans

./: .gitignore  README.md  pyproject.toml
seletrans/api/: __init__.py  baidu.py  base.py  deepl.py
seletrans/constants/: baidu.py
tests/: test_api.py  test_baidu.py  test_bing.py  test_deepl.py  test_google.py  test_seletrans.py
